.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gltxnplrate__c.object
<CustomObject>
    <description>gltxnplrate__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>TEXT( rstkf__gltxnplrate_gltxn__r.rstkf__gltxn_txnseq__c ) &amp; &apos;_&apos; &amp;  rstkf__gltxnplrate_repcmpno__c</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT( rstkf__gltxnplrate_gltxn__r.rstkf__gltxn_txnseq__c ) &amp; &apos;-&apos; &amp;  rstkf__gltxnplrate_repcmpno__c</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_exclude_from_avg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude this transaction from the wt avg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_for_curr_value__c</fullName>
        <label>Subsidiary currency value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_forcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subsidiary company home currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates (Subsidiary company home currency)</relationshipLabel>
        <relationshipName>gltxnplrates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_gltxn__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>The transaction being evaluated</label>
        <referenceTo>rstkf__gltxn__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_historical_rate__c</fullName>
        <label>Historical exchange rate for the txn</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_last_calculated__c</fullName>
        <label>P &amp; L rate last calculated on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_last_period_calculated__c</fullName>
        <label>P&amp;L rate last period cal for period #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_last_weighted_avg__c</fullName>
        <label>Last calculated weighted average</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_overrideby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Rate overridden by</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_overridedate__c</fullName>
        <label>Rate overridden on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_p_and_l_rate_period_10__c</fullName>
        <label>P &amp; L rate as of period 10 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_p_and_l_rate_period_11__c</fullName>
        <label>P &amp; L rate as of period 11 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_p_and_l_rate_period_12__c</fullName>
        <label>P &amp; L rate as of period 12 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_rate_adjustment_period_10__c</fullName>
        <formula>rstkf__gltxnplrate_xact_value_period_10__c  -  rstkf__gltxnplrate_xact_value_period_9__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chg in val at P &amp; L rate as of period 10</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_rate_adjustment_period_11__c</fullName>
        <formula>rstkf__gltxnplrate_xact_value_period_11__c  -  rstkf__gltxnplrate_xact_value_period_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chg in val at P &amp; L rate as of period 11</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_rate_adjustment_period_12__c</fullName>
        <formula>rstkf__gltxnplrate_xact_value_period_12__c  -  rstkf__gltxnplrate_xact_value_period_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chg in val at P &amp; L rate as of period 12</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_ratetype__c</fullName>
        <label>Rate type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_rep_curr_value__c</fullName>
        <label>Parent company value at historical rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_repcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_repcurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent company home currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_spotratepolicy__c</fullName>
        <label>Spot rate policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Rates</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rates</fullName>
                </value>
                <value>
                    <fullName>Daily First,Then Balance Sheet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_spotratesource__c</fullName>
        <label>Actual spot rate source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Rate</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_subcmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Subsidiary company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates (Subsidiary company)</relationshipLabel>
        <relationshipName>gltxnplrates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_syforexschedno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Spot rate source</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Stands for GLTXN P &amp; L Rates</relationshipLabel>
        <relationshipName>gltxnplrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_xact_value_period_10__c</fullName>
        <formula>rstkf__gltxnplrate_for_curr_value__c  *  rstkf__gltxnplrate_p_and_l_rate_period_10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value at P &amp; L rate as of period 10 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_xact_value_period_11__c</fullName>
        <formula>rstkf__gltxnplrate_for_curr_value__c  *  rstkf__gltxnplrate_p_and_l_rate_period_11__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value at P &amp; L rate as of period 11 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnplrate_xact_value_period_12__c</fullName>
        <formula>rstkf__gltxnplrate_for_curr_value__c  *  rstkf__gltxnplrate_p_and_l_rate_period_12__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value at P &amp; L rate as of period 12 end</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Stands for GLTXN P &amp; L Rate</label>
    <listViews>
        <fullName>rstkf__RS_Stands_for_GLTXN_P_L_Rates</fullName>
        <columns>NAME</columns>
        <columns>rstkf__gltxnplrate_repcmpno__c</columns>
        <columns>rstkf__gltxnplrate_glyear__c</columns>
        <columns>rstkf__gltxnplrate_period__c</columns>
        <columns>rstkf__gltxnplrate_repcurr__c</columns>
        <columns>rstkf__gltxnplrate_rep_curr_value__c</columns>
        <columns>rstkf__gltxnplrate_subcmpno__c</columns>
        <columns>rstkf__gltxnplrate_forcurr__c</columns>
        <columns>rstkf__gltxnplrate_for_curr_value__c</columns>
        <columns>rstkf__gltxnplrate_ratetype__c</columns>
        <columns>rstkf__gltxnplrate_overrideby__c</columns>
        <columns>rstkf__gltxnplrate_overridedate__c</columns>
        <columns>rstkf__gltxnplrate_last_weighted_avg__c</columns>
        <columns>rstkf__gltxnplrate_exclude_from_avg__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Stands for GLTXN P &amp; L Rates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stands for GLTXN P &amp; L Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>